# AI-Arranger-Studio

./: .env.example  .env.local-models.example  .gitignore  Makefile  NEXT_LOCAL_MODELS_PR20_27_README.md  README.md  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements-training-ai.txt  requirements.txt
PATCHES/: ai_models_yaml_update_notes.md  env_example.additions.txt
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/routes/: ai_generation.py  ai_planner.py
configs/: ai_models.local.example.yaml  ai_models.pro.yaml  ai_models.yaml  chord_dictionary.yaml  ensembles.yaml  evaluation_pack.yaml  generation_profiles.pro.yaml  instruments.yaml  jazz_progressions.yaml  local_model_runtime.pro.yaml  model_install_plan.yaml  model_registry.example.yaml  professional_benchmark_gate.pro.yaml  scales.yaml  text2midi_prompt_templates.yaml
docker/: api.Dockerfile
docs/: 00_MASTER_RECIPE.md  01_CODEX_WORKFLOW.md  02_ARCHITECTURE.md  03_MUSICAL_SPEC_JAZZ.md  04_OBJECTIVES.md  05_DATASET_LEARNING_MODE.md  06_VALIDATION_AND_QA.md  07_API_SPEC.md  08_EXPORT_SPEC.md  09_AI_EXTENSION_CONTRACT.md  10_PACKAGING_AND_SMOKE.md  11_FUTURE_AI_TRAINING.md
scripts/: ai_contract_smoke.py  api_smoke.py  arrangement_smoke.py  bootstrap_check.py  compile_prompt.py  custom_role_model_smoke.py  dataset_learning_smoke.py  demo_jazz.py  export_demo.py  export_tokenized_dataset.py  golden_generate.py  harmony_smoke.py  lead_sheet_smoke.py  package_smoke.py  preset_smoke.py  statistical_baselines_smoke.py  tokenization_dataset_smoke.py  train_statistical_baselines.py  (+4 more)
(+243 files in other folders)
